@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,16 +24,20 @@
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
 
-/**
+import org.junit.jupiter.api.function.Executable;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+/*
  * @test
  * @bug 8183743
  * @summary Test to verify the new overload method with Charset functions the
  * same as the existing method that takes a charset name.
- * @run testng EncodingTest
+ * @run junit ${test.main.class}
  */
 public class EncodingTest {
     public static enum ParameterType {
@@ -41,16 +45,14 @@ public class EncodingTest {
         CHARSET
     }
 
-    @DataProvider(name = "illegalArgument")
-    public Object[][] getParameters() {
+    public static Object[][] getParameters() {
         return new Object[][]{
             {ParameterType.STRING},
             {ParameterType.CHARSET}
         };
     }
 
-    @DataProvider(name = "decode")
-    public Object[][] getDecodeParameters() {
+    public static Object[][] getDecodeParameters() {
         return new Object[][]{
             {"The string \u00FC@foo-bar"},
             // the string from javadoc example
@@ -82,17 +84,16 @@ public class EncodingTest {
      * @param type the type of the argument, e.g a String charset name or
      * charset
      */
-    @Test(dataProvider = "illegalArgument", expectedExceptions = IllegalArgumentException.class)
+    @ParameterizedTest
+    @MethodSource("getParameters")
     public void testIllegalArgument(ParameterType type) throws Exception {
         String encoded = URLEncoder.encode("http://www.xyz.com/find?key=\u0100\u0101",
                 StandardCharsets.UTF_8.name());
         String illegal = "%" + encoded;
-        String returned;
-        if (type == ParameterType.STRING) {
-            returned = URLDecoder.decode(illegal, StandardCharsets.UTF_8.name());
-        } else {
-            returned = URLDecoder.decode(illegal, StandardCharsets.UTF_8);
-        }
+        Executable decoded = type == ParameterType.STRING
+                ? () -> URLDecoder.decode(illegal, StandardCharsets.UTF_8.name())
+                : () -> URLDecoder.decode(illegal, StandardCharsets.UTF_8);
+        assertThrows(IllegalArgumentException.class, decoded);
     }
 
     /**
@@ -101,17 +102,18 @@ public class EncodingTest {
      *
      * @param s the string to be encoded and then decoded with both existing
      * and the overload methods.
-     * @throws Exception
+     * @throws Exception if failed
      */
-    @Test(dataProvider = "decode")
+    @ParameterizedTest
+    @MethodSource("getDecodeParameters")
     public void decode(String s) throws Exception {
         String encoded = URLEncoder.encode(s, StandardCharsets.UTF_8.name());
         String returned1 = URLDecoder.decode(encoded, StandardCharsets.UTF_8.name());
         String returned2 = URLDecoder.decode(encoded, StandardCharsets.UTF_8);
-        Assert.assertEquals(returned1, returned2);
+        assertEquals(returned2, returned1);
     }
 
-    String charactersRange(char c1, char c2) {
+    private static String charactersRange(char c1, char c2) {
         StringBuilder sb = new StringBuilder(c2 - c1);
         for (char c = c1; c < c2; c++) {
             sb.append(c);
